style.css
*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    background-image: url("./pics/construction.jpg");
    /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("./pics/construction.jpg"); */
}

html {
    background-color: black;
    font-family: 'Roboto', sans-serif;
    overflow-x: hidden;
    width: 100%;
}

body {
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
}

#welcome {
    display: block;
    padding: 1rem;
    margin-bottom: 20vh;
    text-align: center;
    align-content: center;
    /* max-width: 90vw; */
    width: fit-content;
    height: min-content;
    /* border: 1px solid lime; */
}

#welcome>figure>h1 {
    font-style: italic;
}

#welcome>figure>h4 {
    color: black;
    font-weight: bolder;
    background: repeating-linear-gradient(
  45deg,
  gray,
  gray 10px,
  darkkhaki 10px,
  darkkhaki 20px);
}

/* .fadeIn1 {
    transition: all 0.5s ease-in-out;
    opacity: 0;
}
.fadeIn2 {
    transition: all 1s ease-in-out;
    opacity: 0;
}
.fadeIn3 {
    transition: all 2.5s ease-in-out;
    opacity: 0;
    color: white;
    font-size: 0rem;
}
.fadeIn4 {
    transition: all 2.5s ease-in-out;
    color: black;
}
.fadeIn1.show {
    margin-top: 15vh;
    border: 1px solid lime;
    opacity: 1;
}
.fadeIn2.show {
    opacity: 1;
    color: white;
}
.fadeIn3.show {
    opacity: 1;
    font-size: 100%;
    color: lime;
    transform: scale(1, -1) scale(1, -1);
}
.fadeIn4.show {
    color: lime;
} */

footer {
    position: absolute;
    bottom: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    gap: 1rem;
    color: white;
}

#gitLogo,#igLogo {
    max-height: 1.5rem;
    transition: transform 0.5s ease-in-out;
}

#gitLogo:hover,#igLogo:hover {
    transform: scale(-1, 1) scale(1);
}

/* Welcome animations */
.animationDropDown {
    color: white;
    animation: animationDropDown 0.75s;
    margin-top: 5vh;
}
@keyframes animationDropDown {
    0% {
        margin-top: -10rem;
    }
    80% {
        margin-top: 12rem;
    }
    100% {
        margin-top: 5vh;
    }
}

.animationSlideFromLeft {
    color: white;
    animation: animationSlideFromLeft 2.25s;
}
.animationSlideFromLeft>:nth-child(2) {
    color: black;
}
@keyframes animationSlideFromLeft {
    0% {
        margin-left: -350rem;
    }
    20% {
        margin-left: -350rem;
    }
    90% {
        margin-right: -15rem;
    }
    100% {
    }
}

.animationExpand {
    animation: animationExpand 3.5s ease-in;
    color: lime;
}
@keyframes animationExpand {
    0% {
        opacity: 0;
        font-size: 0rem;
    }
    79% {
        opacity: 0;
        font-size: 0rem;
    }
    80% {
        font-size: 0.1rem;
    }
    90% {
        font-size: 2.5rem;
    }
    100% {
        font-size: 1rem;
    }
}

.animationTurnGreen {
    animation: animationTurnGreen 3.15s ease-in-out;
    color: lime;
}
@keyframes animationTurnGreen {
    0% {
        color: black;
    }
    99% {
        color: black;
    }
    100% {
        color: lime;
    }
}

.animationBorder {
    border: 1px solid lime;
    border-radius: 0.125rem;
    animation: animationBorder 4.4s ease-in-out;
}
@keyframes animationBorder {
    0% {
        border: none;
    }
    66% {
        border: none;
    }
    71% {
        border: 8px solid lime;
        border-radius: 10px;
    }
    100% {
        border: 1px solid lime;
    }
}

.animationFlipIn {
    animation: animationFlipIn 5s;
    border-radius: .125rem;
}
@keyframes animationFlipIn {
    0% {
        opacity: 0;
    }
    79% {
        opacity: 0;
    }
    80% {
        transform: scale(1);
    }
    100% {
        transform: scale(1, -1) scale(1, -1);
    }
}

